# YAR

./: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  EvaluationTemplate_filled.csv  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  assessment_report.md  cleanup.sh  debug_eval_retrieval.py  docker-compose.test.yml  docker-compose.yml  env.example  lightrag.service.example  monitor_pipeline.py  observation1.md  package-lock.json  pyproject.toml  pyrightconfig.json  qa_eval_by_document.csv  ruff.toml  setup.sh  start.sh  ty.toml  upload_pdfs.py  yar.service.example
.clinerules/: 01-basic.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docker-publish.yml
.omp/commands/: commit.md
.omp/rules/: git-commit-conventions.md
config/: entity_aliases.yaml
docker/postgres-age-vector/: Dockerfile
docs/: Algorithm.md  DockerDeployment.md  FrontendBuildGuide.md  LightRAG_concurrent_explain.md  YAR_RAG_Chat_App_Structure_One_Page.md
eval_docs/: qa_pairs.json
examples/: graph_visual_with_html.py  insert_custom_kg.py  lightrag_ollama_demo.py  lightrag_openai_compatible_demo.py  lightrag_openai_demo.py  modalprocessors_example.py  raganything_example.py  test_centrality_standalone.py  test_entity_resolution.py  test_entity_resolution_accuracy.py  test_mmr_standalone.py  yar_azure_openai_demo.py  yar_ollama_demo.py
lightrag/: base.py  citation.py  constants.py  exceptions.py  lightrag.py  operate.py  prompt.py  rerank.py  utils.py  utils_graph.py
lightrag/api/: config.py  lightrag_server.py  utils_api.py
lightrag/document/: __init__.py  kreuzberg_adapter.py
lightrag/entity_resolution/: __init__.py  abbreviations.py  clustering.py  config.py  resolver.py
lightrag/evaluation/: auto_optimize_prompt.py  debug_prompt_responses.py  eval_all_prompts.py  eval_rag_quality.py  optimize_extraction_prompts.py  optimize_prompt_dspy.py  pharma_test_dataset.json  test_prompt_variants.py
lightrag/kg/: postgres_impl.py  shared_storage.py
lightrag/llm/: binding_options.py  openai.py
lightrag/storage/: s3_client.py
lightrag/tools/: clean_llm_query_cache.py  infer_entity_types.py  migrate_llm_cache.py
lightrag_webui/: .env.development  package.json  playwright.config.ts  vite.config.ts
lightrag_webui/e2e/: accessibility.spec.ts  citation-dedup.spec.ts  component-demo.spec.ts  documents.spec.ts  keyboard-shortcuts.spec.ts  retrieval-complete.spec.ts  retrieval.spec.ts  settings.spec.ts  theme-persistence.spec.ts
lightrag_webui/src/: App.tsx  AppRouter.tsx
reproduce/: Step_0.py  Step_1.py  Step_1_openai_compatible.py  Step_3.py  Step_3_openai_compatible.py
scripts/: backfill_s3_keys.py  benchmark_kreuzberg_ocr.py  benchmark_kreuzberg_ocr_batch.py  generate_litellm_config.sh  graph_evidence_coverage.py  honohub.ts  hyde_concept.py  identify_guardrail_source.py  inspect_processed_doc.py  migrate_docker_volumes_to_disk.sh  orphan_connection_quality.py  package.json  probe_vision_page.py  repair_chunk_bookkeeping.py  reset_eval_corpus.sh  test_bedrock.py  test_guardrail_recovery.py  test_image_variants.py  test_litellm.py  test_vision_prompts.py  two_stage_retrieval.py  yar_graph_analysis.py
services/litellm/: Dockerfile  config.yaml
services/postgres-age-vector/: Dockerfile
tests/: README_WORKSPACE_ISOLATION_TESTS.md  conftest.py  run_quality_tests.py  test_analyze_query_intent.py  test_aquery_data_endpoint.py  test_auth_handler.py  test_base.py  test_bm25_sql_builder.py  test_chunk_bookkeeping.py  test_chunking_config.py  test_citation.py  test_citation_utils.py  test_citation_validation.py  test_constants.py  test_curl_aquery_data.sh  test_doc_status_pagination_integration.py  test_document_routes.py  test_entity_alias_resolution.py  test_entity_resolution_config.py  test_eval_rag_quality.py  test_exceptions.py  test_explain_routes.py  test_extraction_prompt_ab.py  test_extraction_quality.py  test_fts_cache.py  test_generate_ragas_questions.py  test_grade_qa_answers.py  test_graph_evidence_coverage.py  test_graph_routes.py  test_graph_storage.py  test_hyde_concept.py  test_kreuzberg_adapter.py  test_lexical_boost.py  test_lightrag.py  test_live_tuna_entity_extraction.py  test_llm_bindings.py  test_merge_doc_chunk_map.py  test_metrics.py  test_metrics_routes.py  test_namespace.py  (+39 more)
tests/fixtures/: test_sample.pptx
tests/test_entity_resolution/: conftest.py  test_abbreviations.py  test_alias_routes.py  test_auth_integration.py  test_background_tasks.py  test_clustering.py  test_config.py  test_operate_integration.py  test_resolver.py  test_resolver_db.py  test_server_config.py  test_server_integration.py
yar/: __init__.py  base.py  citation.py  constants.py  exceptions.py  graph_model.py  metrics.py  operate.py  prompt.py  rerank.py  tracing.py  type_defs.py  types.py  utils.py  utils_graph.py  validators.py  yar.py
yar/api/: README-zh.md  README.md  auth.py  config.py  gunicorn_config.py  run_with_gunicorn.py  utils_api.py  yar_server.py
yar/cache/: __init__.py  fts_cache.py
yar/document/: __init__.py  kreuzberg_adapter.py  semantic_chunker.py  vision_adapter.py
yar/entity_resolution/: __init__.py  config.py  resolver.py
yar/evaluation/: README.md  README_EVALUASTION_RAGAS.md  __init__.py  auto_optimize_prompt.py  compare_results.py  debug_prompt_responses.py  download_wikipedia.py  dspy_optimize.py  dspy_optimize_entity_extraction.py  dspy_optimize_entity_review.py  dspy_optimize_keywords.py  dspy_optimize_summary.py  e2e_test_harness.py  eval_all_prompts.py  eval_rag_quality.py  export_qa_answers.py  extraction_quality.py  generate_heatmaps.py  generate_ragas_questions.py  grade_comparison.py  grade_concierge.py  grade_qa_answers.py  ingest_test_docs.py  inspect_grades.py  optimize_extraction_prompts.py  optimize_prompt_dspy.py  phoenix_aggregate.py  (+13 more)
yar_webui/: .oxfmtrc.json  .oxlintrc.json  README.md  biome.json  bunfig.toml  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+252 files in other folders)
