[build-system]
requires = ["setuptools==80.10.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yar"
dynamic = ["version"]
authors = [
    {name = "Zirui Guo"}
]
description = "YAR (Yet Another RAG): Simple and Fast Retrieval-Augmented Generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp==3.13.3",
    "configparser==7.2.0",
    "dspy==3.1.2",
    "json_repair==0.55.1",
    "numpy==2.4.1",
    "pandas==3.0.0",
    "pipmaster==1.1.0",
    "pydantic==2.12.5",
    "pypinyin==0.55.0",
    "python-dotenv==1.2.1",
    "sentence-transformers==5.2.2",
    "setuptools==80.10.2",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "xlsxwriter==3.2.9",
    "kreuzberg==4.2.2",
    "pypdfium2==5.3.0",  # PDF rendering library for Kreuzberg (pdfium bindings)
]

[project.optional-dependencies]
# Test framework and dev tool dependencies (for CI/CD and testing)
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pre-commit==4.5.1",
    "ruff==0.14.14",
    "ty==0.0.14",  # Fast Python type checker (Rust-based, from Astral)
]

api = [
    # Core dependencies
    "aiohttp==3.13.3",
    "configparser==7.2.0",
    "json_repair==0.55.1",
    "numpy==2.4.1",
    "openai==2.16.0",
    "pandas==3.0.0",
    "pipmaster==1.1.0",
    "pydantic==2.12.5",
    "pypinyin==0.55.0",
    "python-dotenv==1.2.1",
    "setuptools==80.10.2",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "xlsxwriter==3.2.9",
    # API-specific dependencies
    "aiofiles==25.1.0",
    "ascii_colors==0.11.7",
    "asyncpg==0.31.0",
    "pgvector==0.4.2",
    "distro==1.9.0",
    "fastapi==0.128.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "jiter==0.12.0",
    "bcrypt==5.0.0",
    "psutil==7.2.2",
    "PyJWT==2.10.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.22",
    "pytz==2025.2",
    "uvicorn==0.40.0",
    "gunicorn==24.1.1",
    # Document processing now handled by Kreuzberg (56+ formats, required dependency)
]

# Offline deployment dependencies (layered design for flexibility)
offline-storage = [
    # Storage backend dependencies
    "asyncpg==0.31.0",
    "pgvector==0.4.2",
]

offline-llm = [
    # LLM provider dependencies
    "openai==2.16.0",
]

offline = [
    # Complete offline package (includes api for document processing, plus storage and LLM)
    "yar[api,offline-storage,offline-llm]",
]

test = [
    "yar[api]",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pre-commit==4.5.1",
    "ruff==0.14.14",
    "moto[s3]==5.1.20",  # AWS S3 mocking for S3 client tests
    "httpx==0.28.1",  # Async HTTP client for FastAPI testing
    "aioboto3==15.5.0",  # Required for S3 client tests
]

# Type-checking/lint extras
lint = [
    "ty==0.0.14",
]

evaluation = [
    "yar[api]",
    "ragas==0.3.1",
    "datasets==4.5.0",
]

observability = [
    # LLM observability and tracing dependencies
    "langfuse==3.12.1",
]

[project.scripts]
yar-server = "yar.api.yar_server:main"
yar-gunicorn = "yar.api.run_with_gunicorn:main"
yar-download-cache = "yar.tools.download_cache:main"

[project.urls]
Homepage = "https://github.com/clssck/YAR"
Documentation = "https://github.com/clssck/YAR"
Repository = "https://github.com/clssck/YAR"
"Bug Tracker" = "https://github.com/clssck/YAR/issues"

[tool.setuptools.packages.find]
include = ["yar*"]
exclude = ["data*", "tests*", "scripts*", "examples*", "dickens*", "reproduce*", "output_complete*", "rag_storage*", "inputs*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "yar.__version__"}

[tool.setuptools.package-data]
yar = ["api/webui/**/*", "api/static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py313"

# ty configuration is in ty.toml (takes precedence over pyproject.toml)
