[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yar"
dynamic = ["version"]
authors = [
    {name = "Zirui Guo"}
]
description = "YAR (Yet Another RAG): Simple and Fast Retrieval-Augmented Generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp",
    "configparser",
    "dspy>=3.0.4",
    "json_repair",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pgvector>=0.3.6",
    "pipmaster",
    "pydantic",
    "pypinyin",
    "python-dotenv",
    "PyYAML>=6.0",
    "sentence-transformers>=5.1.2",
    "setuptools",
    "tenacity",
    "tiktoken",
    "xlsxwriter>=3.1.0",
    "pypdfium2>=5.0.0",  # PDF native text fallback for vision extraction
    "Pillow>=10.0.0",  # Image manipulation for guardrail-bypass image variants
]

[project.optional-dependencies]
# Test framework and dev tool dependencies (for CI/CD and testing)
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pre-commit",
    "ruff",
    "ty",  # Fast Python type checker (Rust-based, from Astral)
]

api = [
    # Core dependencies
    "aiohttp",
    "configparser",
    "json_repair",
    "numpy>=2.0.0",
    "openai>=2.0.0",
    "pandas>=2.0.0",
    "pipmaster",
    "pydantic",
    "pypinyin",
    "python-dotenv",
    "setuptools",
    "tenacity",
    "tiktoken",
    "xlsxwriter>=3.1.0",
    # API-specific dependencies
    "aiofiles",
    "ascii_colors",
    "aioboto3>=12.0.0",
    "asyncpg>=0.29.0",
    "distro",
    "fastapi",
    "httpcore",
    "httpx>=0.28.1",
    "jiter",
    "bcrypt>=4.0.0",
    "psutil",
    "PyJWT>=2.8.0",
    "python-multipart",
    "pytz",
    "uvicorn",
    "gunicorn",
    # API-specific runtime dependencies
]

# Offline deployment dependencies (layered design for flexibility)
offline-storage = [
    # Storage backend dependencies
    "asyncpg>=0.29.0",
]

offline-llm = [
    # LLM provider dependencies
    "openai>=2.0.0",
]

offline = [
    # Complete offline package (includes api for document processing, plus storage and LLM)
    "yar[api,offline-storage,offline-llm]",
]

test = [
    "yar[api]",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pre-commit",
    "ruff",
    "moto[s3]>=5.0",  # AWS S3 mocking for S3 client tests
    "httpx>=0.27",  # Async HTTP client for FastAPI testing
    "aioboto3>=12.0.0",  # Required for S3 client tests
]

# Type-checking/lint extras
lint = [
    "ty>=0.0.1a30",
]

evaluation = [
    "yar[api]",
    "ragas>=0.4.3",
    "datasets>=4.3.0",
    "rapidfuzz>=3.0",
]

observability = [
    # LLM observability, Phoenix tracing, and trace-evaluation dependencies
    "langfuse>=3.8.1",
    "arize-phoenix-otel>=0.16.0",
    "arize-phoenix-client>=1.16.0",
    "arize-phoenix-evals>=3.0.0",
    # Optional auto-instrumentors (activated via YAR_TRACE_INSTRUMENT_* env vars).
    # Auto-instrumenting OpenAI captures every direct client call including
    # ingestion-time entity extraction; off by default to keep query traces clean.
    "openinference-instrumentation-openai>=0.1.21",
    "openinference-instrumentation-litellm>=0.1.18",
    "opentelemetry-instrumentation-httpx>=0.49b0",
]

[project.scripts]
yar-server = "yar.api.yar_server:main"
yar-gunicorn = "yar.api.run_with_gunicorn:main"
yar-download-cache = "yar.tools.download_cache:main"

[project.urls]
Homepage = "https://github.com/clssck/YAR"
Documentation = "https://github.com/clssck/YAR"
Repository = "https://github.com/clssck/YAR"
"Bug Tracker" = "https://github.com/clssck/YAR/issues"

[tool.setuptools.packages.find]
include = ["yar*"]
exclude = ["data*", "tests*", "scripts*", "rag_storage*", "inputs*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "yar.__version__"}

[tool.setuptools.package-data]
yar = ["api/webui/**/*", "api/static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    # Third-party: phoenix imports its own deprecated submodule (phoenix.evals.templating)
    # on package init; YAR cannot act on it, so silence just this exact message.
    "ignore:The phoenix.evals.templating module is deprecated:DeprecationWarning",
]

[tool.ruff]
target-version = "py313"

# ty configuration is in ty.toml (takes precedence over pyproject.toml)
